# mozilla-bitbar-devicepool

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  Pipfile  README.bb.md  README.lt.md  README.md  lt_config_mover.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.ci_scripts/: device_group_report.sh
.circleci/: config.yml
config/: config-v3-server.yml  config.yml  lambdatest.yml
docs/: power-meter-cdc-acm-issue.md  power-meter-vendor-comparison.md  v3-server-migration.md
mozilla_bitbar_devicepool/: __init__.py  compare_to_api.py  compare_to_api_lt.py  compare_to_api_v3.py  configuration.py  configuration_device_mover.py  configuration_lt.py  device_group_report.py  device_group_report_lt.py  docker_server_report.py  logging_setup.py  main.py  run_cmd_lt.py  taskcluster.py  taskcluster_client.py  test_configuration_device_mover.py  test_run_manager.py  test_run_manager_lt.py
mozilla_bitbar_devicepool/bitbar/: admin_devices.py  device_groups.py  devices.py  files.py  frameworks.py  projects.py  runs.py
mozilla_bitbar_devicepool/lambdatest/: api.py  job_cleaner.py  job_config.py  job_tracker.py  run_cmd.py  status.py  util.py
mozilla_bitbar_devicepool/lambdatest/example_configs/: joel1.yaml
mozilla_bitbar_devicepool/lambdatest/features/: devices_in_multiple_projects.md
mozilla_bitbar_devicepool/lambdatest/user_script/: reboot_and_wait.py  setup_and_run_gw.sh  setup_script.sh
mozilla_bitbar_devicepool/lambdatest/user_script/files/: entrypoint.py  entrypoint.sh  run_gw.py  script.py  worker-runner-config.yml.template
mozilla_bitbar_devicepool/lambdatest/user_scripts/: CHANGELOG.md
mozilla_bitbar_devicepool/lambdatest/user_scripts/run_cmd/: run_cmd_on_device.sh
mozilla_bitbar_devicepool/lambdatest/user_scripts/v1/: reboot_and_wait.py
mozilla_bitbar_devicepool/lambdatest/user_scripts/v1/files/: script.py
mozilla_bitbar_devicepool/lambdatest/user_scripts/v2/: setup_script.sh
mozilla_bitbar_devicepool/lambdatest/user_scripts/v2-py312_and_hg702/: reboot_and_wait.py  setup_script.sh  version.txt
mozilla_bitbar_devicepool/lambdatest/user_scripts/v3-disable-adb-killserver/: hyperexecute.yaml.tmpl  reboot_and_wait.py  version.txt
mozilla_bitbar_devicepool/lambdatest/user_scripts/v3-disable-adb-killserver/files/: script.py  worker-runner-config.yml.template
mozilla_bitbar_devicepool/lambdatest/user_scripts/v4-python313/: changelog.txt  setup_script.sh  version.txt
mozilla_bitbar_devicepool/lambdatest/user_scripts/v4-python_fix/: setup_script.sh  version.txt
mozilla_bitbar_devicepool/lambdatest/user_scripts/v5-python_runtime/: setup_script.sh  version.txt
mozilla_bitbar_devicepool/lambdatest/user_scripts/v6-setup_sets_portrait/: reboot_and_wait.py  setup_script.sh  version.txt
mozilla_bitbar_devicepool/lambdatest/user_scripts/v7-cdc_acm_detach_for_power_meters/: setup_script.sh  version.txt
mozilla_bitbar_devicepool/lambdatest/user_scripts/v8-disable-scrcpy-video/: hyperexecute.yaml.tmpl  version.txt
mozilla_bitbar_devicepool/lambdatest/user_scripts/v8-disable-scrcpy-video/files/: run_gw.py  script_test.py
mozilla_bitbar_devicepool/lambdatest/user_scripts/v9-disable-livevideo/: changelog.txt  hyperexecute.yaml.tmpl  version.txt
mozilla_bitbar_devicepool/reporting/: main.py
mozilla_bitbar_devicepool/test/: configuration_device_mover_test.py  configuration_lt_load_test.py  configuration_lt_test.py  device_group_report_test.py  job_cleaner_test.py  job_config_test.py  job_tracker_test.py  lt_util_test.py  status_test.py  tasckluster_client_test.py  test_run_manager_lt_test.py  util_test.py
mozilla_bitbar_devicepool/test/test_data/: .gitignore  lt_get_devices_1.txt  lt_get_jobs_2.txt  lt_get_jobs_shortened.txt
mozilla_bitbar_devicepool/test/test_data/configs/: test_config.yml  test_config_2.yml  test_config_2_EXPECTED.yml  test_config_2_IDEAL.yml
mozilla_bitbar_devicepool/util/: misc.py  template.py
scripts/: check_power_meter.sh  chrome_versions.sh
service/: bitbar-v3.service  bitbar.service  lambdatest.service
