[tool.poetry]
name = "mozilla-bitbar-devicepool"
version = "2.0.0"
description = "Manage Mozilla Android Hardware testing at Bitbar"
authors = ["Bob Clary <bclary@mozilla.com>", "Andrew Erickson <aerickson@mozilla.com>"]
maintainers = ["Andrew Erickson <aerickson@mozilla.com>"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/mozilla-platform-ops/mozilla-bitbar-devicepool"
packages = [{include = "mozilla_bitbar_devicepool"}]
classifiers = [
        "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"
requests = "^2.28.2"
# use an unreleased version on master, v2.100.0+
#   - includes https://github.com/bitbar/testdroid-api-client-python/issues/141
testdroid = {git = "https://github.com/bitbar/testdroid-api-client-python", rev = "4f341bc6fe12205a107381ed59f302ba0e19a904"}
sentry-sdk = "^1.15.0"
pytest = "^7.2.1"
termplotlib = "^0.3.9"
gitpython = "^3.1.42"
humanhash3 = "^0.0.6"
requests-cache = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
pylint = "^2.16.2"
pytest = "^7.2.1"
pytest-watch = "^4.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.23.0"

[tool.poetry.scripts]
mbd = 'mozilla_bitbar_devicepool.main:main'
mld = 'mozilla_bitbar_devicepool.test_run_manager_lt:main'
dgr = 'mozilla_bitbar_devicepool.device_group_report:main'
dgrlt = 'mozilla_bitbar_devicepool.device_group_report_lt:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.deptry]
#ignore = ["DEP001", "DEP002"]

[tool.deptry.per_rule_ignores]
DEP001 = ["google", "mozdevice"]
DEP003 = ["google", "mozdevice"]
